--- a/cmd/play/app/package.json
+++ b/cmd/play/app/package.json
@@ -12,12 +12,12 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "bootstrap": "^5.2.3",
     "monaco-editor": "^0.36.1",
+    "nanoid": "^4.0.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-terminal-ui": "^1.0.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
