--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,4 +23,4 @@ jobs:
           go-version: ${{ matrix.go-version }}
       - name: Checkout code
         uses: actions/checkout@v3
-        run: go run github.com/cue-unity/unity/cmd/unity test --verbose
+      - run: go run github.com/cue-unity/unity/cmd/unity test --verbose
