--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,4 +20,6 @@ jobs:
           go-version: ${{ matrix.go-version }}
       - name: Checkout code
         uses: actions/checkout@v3
-      - run: go run github.com/cue-unity/unity/cmd/unity test --verbose
+      - run: |
+          go install github.com/cue-unity/unity/cmd/unity
+          unity test --verbose
