--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        go-version: ['1.20']
+        go-version: ['1.19']
         platform: [ubuntu-latest]
     runs-on: ${{ matrix.platform }}
     steps:
@@ -21,5 +21,5 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       - run: |
-          go install github.com/cue-unity/unity/cmd/unity
+          go install github.com/cue-unity/unity/cmd/unity@latest
           unity test --verbose
