--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,5 @@ jobs:
           go-version: ${{ matrix.go-version }}
       - name: Checkout code
         uses: actions/checkout@v3
-      - run: |
-          go install github.com/cue-unity/unity/cmd/unity@latest
-          unity test --verbose
+      - run: go install github.com/cue-unity/unity/cmd/unity@latest
+      - run: unity test --verbose
