--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,27 +1,11 @@
-name: Go
+name: Release
 
 on:
   push:
-    branches: [ "main" ]
     tags:
       - 'v[0-9]+.[0-9]+.[0-9]+'
-  pull_request:
-    branches: [ "main" ]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Set up Go
-      uses: actions/setup-go@v3
-      with:
-        go-version: 1.19
-
-    - name: Test
-      run: go test -v ./...
-
   goreleaser:
     runs-on: ubuntu-latest
     steps:
